# GraphicsEditor

./: CMakeLists.txt
cmake/: GResource.cmake  GSettings.cmake
schemas/: graphicseditor.gschema.xml
scripts/: install_deps_ubuntu.sh  make.sh  run.sh
src/: drawingpane.c  drawingpane.h  drawingpane_utils.c  drawingpane_utils.h  drawutils.c  drawutils.h  graphicseditor.c  graphicseditor.h  graphicseditor_enum_types.c  graphicseditor_enum_types.c.template  graphicseditor_enum_types.h  graphicseditor_enum_types.h.template  graphicseditor_utils.h  graphicseditorwin.c  graphicseditorwin.h  main.c  matrix_utils.c  matrix_utils.h
ui/: drawing_pane.xml  grapheditor.gresource.xml  graphicseditor.gresource.xml  hyperbole_dialog.xml  window.ui  window.xml
